Update project to build and deploy specific maven artifacts of Difi move-integrationpunkt