@@ -1,5 +1,21 @@
 FROM openjdk:9-jre-slim
 
+
+
+
+
+COPY ./run-java.sh /
+
+
+EXPOSE 8080
+
+ENTRYPOINT ["/run-java.sh"]
+
+
+
+
+FROM openjdk:9-jre-slim
+
 MAINTAINER NAV IKT <kevin.sillerud@nav.no>
 
 LABEL package="no.difi"
@@ -7,10 +23,13 @@ LABEL artifact="meldingsformidler"
 LABEL version="2.0"
 LABEL description="Meldingsformidler for offentlige tjenester levert av Difi"
 
-EXPOSE 8080
+ENV LC_ALL="no_NB.UTF-8"
+ENV LANG="no_NB.UTF-8"
+ENV TZ="Europe/Oslo"
 
-ENV APP_DIR /var/lib/difi
-ENV APP_PREFIX integrasjonspunkt
+# Please see https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits
+ENV DEFAULT_JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+
 ENV APP_MAIN_CLASS no.difi.meldingsutveksling.IntegrasjonspunktApplication
 ENV APP_PROFILE staging
 ENV SPRING_CLOUD_CONFIG_ENABLED false
@@ -21,8 +40,11 @@ ENV ENDPOINTS_HEALTH_ENABLED=true
 ENV ENDPOINTS_INFO_ENABLED=true
 #ENV SPRING_DATASOURCE_URL=jdbc:postgresql://tpa-move-integrasjonspunkt-postgresql.tpa/move_db
 
-ADD ${APP_PREFIX}/target/${APP_PREFIX}*.jar ${APP_DIR}/
+EXPOSE 8080
 
-WORKDIR ${APP_DIR}
+WORKDIR /app
 
-CMD APP_NAME=$(ls ${APP_PREFIX}*.jar) && java -jar ${APP_JAVA_PARAMS} ${APP_NAME} ${APP_MAIN_CLASS} --spring.profiles.active=${APP_PROFILE}
+COPY integrasjonspunkt.jar /app/
+
+
+CMD java -jar ${APP_JAVA_PARAMS} ${DEFAULT_JAVA_OPTS} integrasjonspunkt.jar ${APP_MAIN_CLASS} --spring.profiles.active=${APP_PROFILE}
